--- a/src/view/ApptMain.fxml
+++ b/src/view/ApptMain.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ApptMain">
+<AnchorPane prefHeight="400.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.apptMainController">
    <children>
       <Button layoutX="240.0" layoutY="43.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="95.0" text="Delete" />
       <Text layoutX="335.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Appointments" textAlignment="CENTER" wrappingWidth="186.13671875" AnchorPane.bottomAnchor="368.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="8.0">
          <font>
             <Font name="JetBrains Mono Medium" size="24.0" />
-         </font>
+         </font>ss
       </Text>
       <Separator layoutX="326.0" layoutY="40.0" prefHeight="0.0" prefWidth="209.0" AnchorPane.rightAnchor="500.0" />
       <Button layoutX="31.0" layoutY="43.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="95.0" text="Add" />
@@ -30,7 +30,7 @@
             <TableColumn prefWidth="75.0" text="Customer ID" />
         </columns>
       </TableView>
-      <Text layoutX="335.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sort Appointments:" textAlignment="CENTER" wrappingWidth="140.13671875">
+      <Text layoutX="200.0" layoutY="365.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sort Appointments:" textAlignment="CENTER" wrappingWidth="140.13671875">
          <font>
             <Font size="14.0" />
          </font>
