--- a/src/view/AddCust.fxml
+++ b/src/view/AddCust.fxml
@@ -8,8 +8,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.addCustController">
     <children>
 
-        <Label alignment="CENTER" layoutY="14.0" text="Add Customer Data" textAlignment="CENTER"
-               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <Label alignment="CENTER" layoutY="14.0" text="Add Customer Data" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <font>
                 <Font name="JetBrains Mono Medium" size="24.0" />
             </font>
@@ -20,61 +19,61 @@
 
         <VBox alignment="CENTER" layoutX="25.0" layoutY="66.0" prefHeight="304.0" prefWidth="500.0" AnchorPane.topAnchor="65.0">
                     <children>
-                        <GridPane hgap="10" vgap="15" alignment="CENTER">
+                        <GridPane alignment="CENTER" hgap="10" vgap="15">
                             <columnConstraints>
-                                <ColumnConstraints minWidth="100" prefWidth="100" halignment="LEFT" />
-                                <ColumnConstraints minWidth="200" prefWidth="250" hgrow="ALWAYS" />
+                                <ColumnConstraints halignment="LEFT" minWidth="100" prefWidth="100" />
+                                <ColumnConstraints hgrow="ALWAYS" minWidth="200" prefWidth="250" />
                                 <ColumnConstraints minWidth="50" prefWidth="50" />
-                                <ColumnConstraints minWidth="100" prefWidth="100" hgrow="ALWAYS" />
+                                <ColumnConstraints hgrow="ALWAYS" minWidth="100" prefWidth="100" />
                             </columnConstraints>
 
 
                             <Label fx:id="addCustID" text="Customer ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                            <TextField fx:id="addCustIDTextField" disable="true" editable="false"
-                                       promptText="Customer ID automatic" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                            <TextField fx:id="addCustIDTextField" disable="true" editable="false" promptText="Customer ID automatic" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
 
-                            <Label fx:id="addCustomerNameLabel" text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                            <TextField fx:id="addCustomerNameTextField" promptText="Customer Name"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                            <Label fx:id="addCustName" text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                            <TextField fx:id="addCustNameTextField" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
 
-                            <Label fx:id="addCustomerAddress1Label" text="Address Line 1" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                            <TextField fx:id="addCustomerAddress1TextField" promptText="Address Line 1"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                            <Label fx:id="addCustAddress1" text="Address Line 1" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                            <TextField fx:id="addCustAddress1TextField" promptText="Address Line 1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
 
-                            <Label fx:id="addCustomerAddress2Label" text="Address Line 2" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                            <TextField fx:id="addCustomerAddress2TextField" promptText="Address Line 2"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                            <Label fx:id="addCustAddress2" text="Address Line 2" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                            <TextField fx:id="addCustAddress2TextField" promptText="Address Line 2" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
 
                             <Label fx:id="addCustomerPhoneLabel" text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                            <TextField fx:id="addCustomerPhoneTextField" promptText="Phone Number"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                            <TextField fx:id="addCustomerPhoneTextField" promptText="Phone Number" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
 
-                            <Label fx:id="addCustomerCityLabel" text="City" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                            <TextField fx:id="addCustomerCityTextField" promptText="City"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                            <Label fx:id="addCustomerStateLabel" text="State" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                            <TextField fx:id="addCustomerStateTextField" promptText="State"
-                                       GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                            <Label fx:id="addCustCity" text="City" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                            <TextField fx:id="addCustCityTextField" promptText="City" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                            <Label fx:id="addCustState" text="State" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                            <TextField fx:id="addCustStateTextField" promptText="State" GridPane.columnIndex="3" GridPane.rowIndex="5" />
 
 
-                            <Label fx:id="addCustomerCountryLabel" text="Country" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                            <TextField fx:id="addCustomerCountryTextField" promptText="Country"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                            <Label fx:id="addCustomerZipLabel" text="Zip/Postal Code" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                            <TextField fx:id="addCustomerZipTextField" promptText="Zip/Postal"
-                                       GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                            <Label fx:id="addCustCountry" text="Country" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                            <TextField fx:id="addCustCountryTextField" prefHeight="25.0" prefWidth="182.0" promptText="Country" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                            <Label fx:id="addCustZip" text="Zip" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                            <TextField fx:id="addCustZipTextField" promptText="Zip/Postal Code" GridPane.columnIndex="3" GridPane.rowIndex="6" />
 
 
-                            <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="4" GridPane.rowIndex="7">
-                                <Button fx:id="addCustomerSaveButton" mnemonicParsing="false"
-                                        onAction="#AddCustomerSaveButtonPushed" text="Save" />
-                                <Button fx:id="addCustomerCancelButton" mnemonicParsing="false" text="Cancel" />
+                            <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="3" GridPane.rowIndex="7">
+                                <Button fx:id="addCustSaveButton" mnemonicParsing="false" onAction="#onClickToSaveCustomer" prefHeight="25.0" prefWidth="62.0" text="Save" />
+                                <Button fx:id="addCustCancelButton" mnemonicParsing="false" onAction="#onClickToCancelCustomer" prefHeight="25.0" prefWidth="68.0" text="Cancel" />
                             </HBox>
+               <rowConstraints>
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+               </rowConstraints>
                         </GridPane>
                     </children>
                     <padding>
