--- a/src/view/AddAppt.fxml
+++ b/src/view/AddAppt.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.addApptController">
+<AnchorPane prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.addApptController">
     <children>
 
         <Label alignment="CENTER" layoutY="14.0" text="Add Appointment" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -16,14 +16,13 @@
 
     <Separator layoutY="47.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" />
 
-        <VBox alignment="CENTER" layoutX="25.0" layoutY="66.0" prefHeight="500.0" prefWidth="500.0" AnchorPane.topAnchor="65.0">
+        <VBox alignment="CENTER" layoutX="25.0" layoutY="66.0" prefHeight="500.0" prefWidth="450.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="65.0">
             <children>
-                <GridPane alignment="CENTER" hgap="10" vgap="15">
+                <GridPane alignment="CENTER" hgap="10" vgap="15" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="65.0">
                     <columnConstraints>
-                        <ColumnConstraints halignment="LEFT" minWidth="100" prefWidth="100" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="200" prefWidth="250" />
-                        <ColumnConstraints minWidth="50" prefWidth="50" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="100" prefWidth="100" />
+                        <ColumnConstraints halignment="LEFT" minWidth="100.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="200.0" prefWidth="250.0" />
+                  <ColumnConstraints />
                     </columnConstraints>
 
 
@@ -71,7 +70,7 @@
                     <TextField fx:id="userIDTextField" promptText="User ID" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 
 
-                    <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="3" GridPane.rowIndex="10">
+                    <HBox alignment="CENTER" prefHeight="37.0" prefWidth="386.0" spacing="20.0" GridPane.columnSpan="2" GridPane.rowIndex="10">
                         <Button fx:id="saveButton" mnemonicParsing="false" onAction="#onClickSaveAppt" prefHeight="25.0" prefWidth="80.0" text="Save">
                      <HBox.margin>
                         <Insets />
@@ -79,22 +78,10 @@
                         <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#onClickCancelAppt" prefHeight="25.0" prefWidth="80.0" text="Cancel" />
                         <Button fx:id="backButton" mnemonicParsing="false" onAction="#onClickGoBack" prefHeight="25.0" prefWidth="80.0" text="Back" />
                   <padding>
-                     <Insets top="12.0" />
+                     <Insets top="18.0" />
+                     <Insets left="55" />
                   </padding>
                     </HBox>
-               <rowConstraints>
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-               </rowConstraints>
 
                 </GridPane>
             </children>
