--- a/src/view/AddCust.fxml
+++ b/src/view/AddCust.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.addCustController">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.modCustController">
     <children>
 
-        <Label alignment="CENTER" layoutY="14.0" text="Add Customer Data" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <Label alignment="CENTER" layoutY="14.0" text="Add New Customer" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <font>
                 <Font name="JetBrains Mono Medium" size="24.0" />
             </font>
@@ -18,58 +18,54 @@
         <Separator layoutY="47.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" />
 
         <VBox alignment="CENTER" layoutX="25.0" layoutY="66.0" prefHeight="304.0" prefWidth="500.0" AnchorPane.topAnchor="65.0">
-                    <children>
-                        <GridPane alignment="CENTER" hgap="12" vgap="17">
-                            <columnConstraints>
-                                <ColumnConstraints halignment="LEFT" minWidth="100" prefWidth="100" />
-                                <ColumnConstraints hgrow="ALWAYS" minWidth="200" prefWidth="250" />
-                                <ColumnConstraints minWidth="50" prefWidth="50" />
-                                <ColumnConstraints hgrow="ALWAYS" minWidth="100" prefWidth="100" />
-                            </columnConstraints>
+            <children>
+                <GridPane alignment="CENTER" hgap="10" prefHeight="299.0" prefWidth="568.0" vgap="15">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" minWidth="100.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="230.0" minWidth="200.0" prefWidth="217.0" />
+                        <ColumnConstraints maxWidth="80.0" minWidth="17.0" prefWidth="74.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="133.0" minWidth="73.0" prefWidth="79.0" />
+                    </columnConstraints>
 
 
-                            <Label fx:id="addCustomerID" text="Customer ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                            <TextField fx:id="addCustomerIDTextField" disable="true" editable="false" promptText="Cannot Edit" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <Label fx:id="newCustID" text="Customer ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <TextField fx:id="newCustIDTextField" disable="true" editable="false" promptText="Cannot Edit" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
 
-                            <Label fx:id="addCustomerName" text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                            <TextField fx:id="addCustomerNameTextField" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label fx:id="newCustName" text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                    <TextField fx:id="newCustNameTextField" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
 
-                            <Label fx:id="addCustomerAddLine1" text="Address" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                            <TextField fx:id="addCustomerAdd1TextField" promptText="Address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Label fx:id="newCustAddLine1" text="Address, City" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                    <TextField fx:id="newCustAddress1TextField" promptText="Address, City" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+                    <Label fx:id="newCustZip" text="Zip" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                    <TextField fx:id="newCustZipTextField" promptText="Zip/Postal Code" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
 
-                            <Label fx:id="addCustAddLine2" text="Address" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                            <TextField fx:id="addCustAdd2TextField" promptText="Address" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <Label fx:id="newCustomerPhoneLabel" text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                    <TextField fx:id="newCustomerPhoneTextField" promptText="Phone Number" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
 
-                            <Label fx:id="addCustomerPhoneLabel" text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                            <TextField fx:id="addCustomerPhoneTextField" promptText="Phone Number" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <Label fx:id="addCustState" text="State/Province" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                    <ComboBox fx:id="addCustStateComboBox" prefHeight="25.0" prefWidth="219.0" promptText="State/Province" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
 
-                            <Label fx:id="addCustCity" text="City" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                            <TextField fx:id="addCustCityTextField" promptText="City" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                            <Label fx:id="addCustState" text="State" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                            <TextField fx:id="addCustStateTextField" promptText="State" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                    <Label fx:id="newCustCountry" text="Country" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                    <ComboBox fx:id="newCustCountryComboBox" onAction="#onCountrySelected" prefHeight="25.0" prefWidth="219.0" promptText="Country" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
 
-                            <Label fx:id="addCustCountry" text="Country" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                            <TextField fx:id="addCustCountryTextField" promptText="Country" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                            <Label fx:id="addCustZip" text="Zip" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                            <TextField fx:id="addCustZipTextField" promptText="Zip/Postal Code" GridPane.columnIndex="3" GridPane.rowIndex="6" />
 
+                    <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="3" GridPane.rowIndex="7">
+                        <Button fx:id="newCustModButton" mnemonicParsing="false" onAction="#onClickToModCustomer" prefHeight="25.0" prefWidth="62.0" text="Save" />
+                        <Button fx:id="newCustCancelButton" mnemonicParsing="false" onAction="#onClickToCancelCustomer" prefHeight="25.0" prefWidth="68.0" text="Cancel" />
+                    </HBox>
 
-                            <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="3" GridPane.rowIndex="7">
-                                <Button fx:id="addCustSaveButton" mnemonicParsing="false" onAction="#onClickToSaveCustomer" prefHeight="25.0" prefWidth="62.0" text="Save" />
-                                <Button fx:id="addCustCancelButton" mnemonicParsing="false" onAction="#onClickToCancelCustomer" prefHeight="25.0" prefWidth="68.0" text="Cancel" />
-                            </HBox>
-
-                        </GridPane>
-                    </children>
-                    <padding>
-                        <Insets top="5.0" />
-                    </padding>
-                </VBox>
+                </GridPane>
             </children>
-        </AnchorPane>
+            <padding>
+                <Insets top="5.0" />
+            </padding>
+        </VBox>
+    </children>
+</AnchorPane>
