--- a/src/view/ModAppt.fxml
+++ b/src/view/ModAppt.fxml
@@ -27,8 +27,8 @@
 
                     <Label text="Customer" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <VBox spacing="5" GridPane.columnIndex="1" GridPane.rowIndex="0">
-                        <TextField fx:id="customerSearchField" promptText="Search Customer" />
-                        <ComboBox fx:id="customerComboBox" prefWidth="250" />
+                        <ComboBox fx:id="customerComboBox" prefWidth="250" promptText="Select Customer" />
+
                     </VBox>
 
                     <Label text="Appointment ID" GridPane.columnIndex="0" GridPane.rowIndex="1" />
