--- a/src/view/ApptMain.fxml
+++ b/src/view/ApptMain.fxml
@@ -45,7 +45,7 @@
       <Button fx:id="custRecs" layoutX="814.0" layoutY="48.0" mnemonicParsing="false" onAction="#onActionToCustRecs" prefHeight="35.0" prefWidth="125.0" text="Customer Records" />
        <VBox layoutX="300.0" layoutY="340.0" spacing="5">
 
-           <ComboBox fx:id="customerComboBox" layoutX="100.0" prefHeight="25.0" prefWidth="261.0" promptText="All Customers">
+           <ComboBox fx:id="customerComboBox" layoutX="100.0" prefHeight="25.0" prefWidth="261.0">
             <padding>
                <Insets left="10.0" />
             </padding></ComboBox>
