--- a/src/view/Report.fxml
+++ b/src/view/Report.fxml
@@ -15,7 +15,7 @@
            <Insets bottom="15.0" top="15.0" />
        </padding>
       <children>
-         <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="176.0" text="Total Number of Appts" />
+         <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="176.0" text="Total Appts by Type/Month" />
          <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="177.0" text="Appts by Contact Person" />
          <Button layoutX="10.0" layoutY="35.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="187.0" text="Client Count By Country" />
       </children>
